# jurisflow

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bun.lockb  compose.yaml  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
apps/api/: pyproject.toml
apps/api/src/jurisflow_api/: deps.py  main.py  queue.py
apps/api/src/jurisflow_api/routers/: deadlines.py  documents.py  drafts.py  health.py  matters.py  research.py
apps/api/src/jurisflow_api/services/: audit.py  documents.py  drafts.py  matters.py  research.py  sample_matter.py
apps/web/: components.json  next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  home-actions.tsx  layout.tsx  page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/app/traces/: page.tsx
apps/web/src/app/workspace/: page.tsx
apps/web/src/components/: app-sidebar.tsx
apps/web/src/components/ai/: actions.tsx  agent.tsx  artifact.tsx  attachments.tsx  chain-of-thought.tsx  reasoning.tsx
apps/web/src/components/chat/: chat-composer.tsx  chat-markdown.tsx  chat-message.tsx  chat-messages.tsx  chat-types.ts  document-upload.ts  ephemeral-chat-page.tsx  research-content.ts  starter-prompts.ts  thread-empty-state.tsx  (+4 more)
apps/web/src/lib/: api.ts  formatting.ts  rehype-source-refs.ts  types.ts
apps/worker/: pyproject.toml
apps/worker/src/jurisflow_worker/: jobs.py  settings.py
infra/docker/: api.Dockerfile  worker.Dockerfile
tests/: test_retrieval_phase1.py
(+32 files in other folders)
