[project]
name = "jurisflow-api"
version = "0.1.0"
description = "FastAPI service for Jurisflow."
requires-python = ">=3.11"
dependencies = [
  "arq>=0.27,<1.0",
  "fastapi>=0.115,<1.0",
  "python-multipart>=0.0.20,<1.0",
  "sqlalchemy>=2.0.36,<3.0",
  "uvicorn[standard]>=0.32,<1.0",
  "jurisflow-agents",
  "jurisflow-db",
  "jurisflow-parsers",
  "jurisflow-retrieval",
  "jurisflow-shared",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

